payment dashboard responsive, payment method add update

--- a/src/scss/pages/dashboard/order-history.scss
+++ b/src/scss/pages/dashboard/order-history.scss
@@ -581,6 +581,8 @@
     }
   }
   .order-modal {
+    width: 85%;
+
     .payment-success-info {
       padding: 15px;
       border: 18px solid #FAF8F9;
