--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -270,6 +270,7 @@ img {
       position: unset !important;
       margin-bottom: -20px !important;
       transform-origin: top !important;
+      text-align: center;
     }
     & > div:hover {
     }
