--- a/src/scss/components/confirm-modal.scss
+++ b/src/scss/components/confirm-modal.scss
@@ -21,9 +21,17 @@
   }
   .confirm-modal-body {
     padding: 28px;
+
     .confirm-control {
       justify-content: space-between;
       display: flex;
+
+      @media (max-width: 767px) {
+        display: block;
+        .cart-control-right-button {
+          margin: 0;
+        }
+      }
     }
   }
 }
