home page search

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -264,6 +264,7 @@ img {
   .custom-beautiful-textfield {
     input {
       text-align: center;
+      margin-left: 0;
     }
     label {
       color: rgba(0, 0, 0, 0.54) !important;
