--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -43,6 +43,7 @@
 @import 'pages/editgear';
 @import 'pages/privacy-policy';
 @import 'components/cart-modal';
+@import 'components/about-modal';
 @import 'components/empty_activity';
 @import 'components/customspinner';
 @import 'components/calendar/calendar';
