--- a/src/scss/pages/dashboard/order-history.scss
+++ b/src/scss/pages/dashboard/order-history.scss
@@ -174,6 +174,7 @@
             width: 100%;
             font-weight: 600;
             padding: 5px;
+            cursor: pointer;
 
             &:first-child {
               margin-bottom: 20px;
