--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -13,6 +13,11 @@
   .rent-gear-body {
     margin-bottom: 3rem;
     // CSS for sidebar component
+    .custom-beautiful-textfield {
+      input, label {
+        margin-left: 15px;
+      }
+    }
     .sidebar {
       padding: 10px 0;
       background-color: $gray-lighten;
