--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -190,8 +190,13 @@
          letter-spacing: 0.09em;
          text-transform: uppercase;
          border-bottom: 1px solid #f8f8f8;
-         padding: 30px;
          color: #A4A4A4;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         height: 85px;
+         padding: 0 30px;
+
          .forgot-pwd-btn {
            float: right;
            margin-top: 8px;
@@ -202,6 +207,21 @@
            letter-spacing: 0.03em;
            color: #F74377;
            text-decoration: underline;
+         }
+         .upload-photo-row {
+           .file-input-container {
+             cursor: pointer;
+             button, input {
+               cursor: pointer;
+             }
+           }
+           span {
+             color: #252525;
+             font-size: 14px;
+             font-family: 'Helvetica Neue', sans-serif;
+             font-weight: normal;
+             text-transform: none;
+           }
          }
        }
        .wrapper-detail {
@@ -1718,15 +1738,17 @@ span.delete_my_gear {
           img {
             display:block;
             border-radius: 50%;
-            width: 36px !important;
-            height: 36px !important;
-            margin-bottom: 14px !important;
+            width: 39px !important;
+            height: 39px !important;
+            margin-bottom: 0 !important;
             margin-left: 7px !important;
           }
         }
         .user-info {
           .user-name {
-            padding-left: 0px !important;
+            padding-left: 0 !important;
+            font-size: 20px !important;
+            margin-bottom: 0 !important;
           }
           .row {
             display: none;
