--- a/src/scss/pages/rent-gear-detail.scss
+++ b/src/scss/pages/rent-gear-detail.scss
@@ -126,10 +126,11 @@
   }
 
   .description-content {
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, ;
     font-size: 16px;
     line-height: 27px;
     color: #252525;
+    white-space: pre-line;
   }
 
   .view-more {
