--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -184,26 +184,59 @@ img {
   margin-left:7px !important;
 }
 
-.notification-message {
-  h4 {
-    color: white;
-    font-size: 24px;
+/* toast */
+.Toastify__toast-container {
+  width: 450px;
+
+  & > div {
+    padding: 12px 12px 15px;
   }
 }
+.toast-error {
+  background-color: #d2003d;
+  opacity: 1;
+  border: none;
 
-.notification-container {
-  width: 40vw;
-  top: 140px;
-
-  .notification-error {
-    background-color: #d2003d;
-    opacity: 1;
-    border: none;
+  span {
+    background-color: #e61552;
   }
-  .notification-info {
-    background-color: #f82462;
-    opacity: 0.9;
-    border: none;
+}
+.toast-info {
+  background-color: #f82462;
+  opacity: 0.9;
+  border: none;
+
+  span {
+    background-color: #ff608f;
+  }
+}
+.toast-body {
+  display: flex;
+  font-size: 18px;
+  color: white;
+
+  .toast-icon {
+    width: 17%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+    }
+  }
+  .toast-content-wrapper {
+    width: 83%;
+    margin-left: 10px;
+
+    .toast-heading {
+      font-weight: 600;
+    }
   }
 }
 
