--- a/src/scss/pages/dashboard/payment-dashboard.scss
+++ b/src/scss/pages/dashboard/payment-dashboard.scss
@@ -349,13 +349,14 @@
 }
 
 .wrapper-add-method {
-  border: solid 30px #faf8f9;
-  padding: 30px;
+  background-color: #FAF8F9;
+  padding-bottom: 30px;
 
   .method-select-tab-wrapper {
     display: flex;
     height: 70px;
     align-items: center;
+    margin-bottom: 50px;
 
     .tab {
       display: flex;
@@ -381,6 +382,9 @@
       background-color: #f82462;
       color: white;
       border: none;
+      width: 100%;
+      justify-content: space-between;
+      padding: 0 20px;
 
       span:last-child {
         background: #DC295D;
@@ -391,12 +395,13 @@
 
   .method-select-tab-content {
     margin-top: 30px;
-    display: flex;
+    display: block;
 
     & > div {
       padding: 0;
-      &:first-child {
-        padding-right: 15px;
+
+      &:last-child {
+        padding: 0 40px;
       }
     }
     .card-model-wrapper {
@@ -423,7 +428,7 @@
     }
 
     .custom-beautiful-textfield {
-      width: 100%;
+      width: 60%;
       margin: 5px 0;
 
       input {
@@ -437,7 +442,7 @@
       padding: 30px;
       display: flex;
       flex-direction: column;
-      background-color: #fafafa;
+      background-color: #f5f4f5;
       justify-content: space-between;
 
       img {
@@ -477,6 +482,89 @@
         margin-top: 15px;
       }
     }
+
+    .add-swift-progress {
+      display: flex;
+      width: 500px;
+      z-index: 0;
+      margin: 20px;
+
+      .add-gear-progress-item {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        align-items: center;
+        opacity: 0.2;
+        color: $primary-color;
+        position: relative;
+
+        i {
+          font-size: 35px;
+          position: relative;
+          z-index: 1000;
+          background-color: white;
+        }
+
+        &.active {
+          opacity: 1;
+          & > div {
+            color: #252525;
+          }
+        }
+        & > div {
+          margin-top: 5px;
+        }
+
+        &:nth-child(n+2):before {
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 1px;
+          border-top: 2px solid $primary-color;
+          left: -41%;
+          top: 16px;
+        }
+        &:first-child {
+          margin-left: -16%;
+        }
+      }
+    }
+
+    .add-swift-container {
+      .content-wrapper {
+        padding: 50px 0;
+
+        .bank-info-wrapper {
+          padding-left: 15px;
+          margin-top: 20px;
+        }
+        .content-info-wrapper {
+          margin-bottom: 30px;
+          p {
+            margin: 0;
+
+            &:first-child {
+              color: #999;
+              font-size: 12px;
+            }
+          }
+        }
+      }
+      button {
+        padding: 8px 40px;
+      }
+      button.validate-swift-btn {
+        &.disabled {
+          background-color: #FAE4EB;
+          color: #F984A7;
+        }
+      }
+      button.go-back-btn {
+        margin-right: 15px;
+        background-color: #FAF8F9;
+        border: solid 1px #CFCECF;
+      }
+    }
   }
 }
 
@@ -514,8 +602,6 @@
 
   .wrapper-add-method {
     display: block;
-    border-width: 18px;
-    padding: 18px;
 
     .method-select-tab-wrapper {
       .tab {
@@ -543,6 +629,10 @@
         .card-model-wrapper {
           border: none !important;
         }
+      }
+
+      .left-wrapper {
+
       }
     }
   }
@@ -629,7 +719,6 @@
   }
 
   .wrapper-add-method {
-    border-width: 10px;
     .method-select-tab-wrapper {
       text-align: center;
     }
