--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -22,6 +22,7 @@
 @import 'pages/home';
 @import 'pages/home.animation';
 @import 'pages/home-responsive';
+@import 'pages/chat-window';
 @import 'pages/about';
 @import 'pages/login';
 @import 'pages/register';
