--- a/src/scss/pages/chat-window.scss
+++ b/src/scss/pages/chat-window.scss
@@ -1,5 +1,9 @@
-.chat-container {
-  width: 600px;
-  height: 800px;
-  margin: 0 auto;
+.cm-chat-container {
+  width: 700px;
+  height: 750px;
+  margin: 50px auto 0;
+}
+
+.center-stage {
+  width: 100%;
 }
