--- a/src/scss/components/customspinner.scss
+++ b/src/scss/components/customspinner.scss
@@ -16,3 +16,22 @@
   right: 0;
   bottom: 0;
 }
+
+.beaut_spinner_logo {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  p {
+    padding:40px;
+  }
+  background-color: #FFF;
+  opacity: 0.6;
+  z-index: 1200;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
