homepage, about-us pixel ui update

--- a/src/scss/pages/dashboard/payment-dashboard.scss
+++ b/src/scss/pages/dashboard/payment-dashboard.scss
@@ -169,6 +169,10 @@
             margin: 0;
           }
         }
+        button.disabled {
+          color: #7C7C7C;
+          border-color: #7C7C7C;
+        }
       }
     }
 
