--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -110,12 +110,31 @@
     z-index: 5;
     background-color: white;
 
+    .aboutus-container {
+      max-width: 1317px !important;
+      margin: -52px auto 0;
+      padding: 0;
+    }
     .home-subsection {
-      margin: 180px 0 !important;
       align-items: center;
 
+      &:first-child {
+        margin: 233px 0 0 !important;
+      }
+      &:nth-child(2) {
+        margin: 360px 0 0 !important;
+        padding-bottom: 310px;
+      }
+      & > div:first-child {
+        margin-top: -12px;
+      }
+      .avatar-container {
+        margin-top: 0px;
+        display: flex;
+        justify-content: flex-end
+      }
       .back-img {
-        height: 330px;
+        height: 357px;
         background-size: contain;
         background-repeat: no-repeat ;
         background-position: center;
@@ -125,6 +144,7 @@
       }
       .user-avatar-container {
         display: flex;
+        width: 500px;
 
         .user-avatar {
           width: 135px;
@@ -132,30 +152,45 @@
           border-radius: 50%;
           background-repeat: no-repeat;
           background-size: cover;
-          margin: 10px;
+          margin: 7px 10px;
           padding: 0;
         }
       }
+      .question-back-img {
+        flex: 0 0 41%;
+      }
+      .question-container {
+        margin-top: -10px;
+        flex: 0 0 41%;
+      }
       h2 {
         font-family: Gotham Pro;
-        font-size: 43px;
-        line-height: 63px;
+        font-size: 49px;
+        line-height: 65px;
         color: #252525;
       }
-      p {
+      p.about-text {
         font-size: 16px;
         line-height: 27px;
         color: #252525;
-        margin: 2rem 0;
-        width: 73%;
+        width: 81%;
+      }
+      .first-text {
+        margin: 31px 0 31px;
+      }
+      .second-text {
+        margin: 31px 0 44px;
+      }
+      .third-text {
+        margin: 3px 0 52px;
       }
       button {
         font-size: 16px;
         line-height: 20px;
         text-align: center;
-        padding: 12px 30px;
+        padding: 14px 32px;
         vertical-align: middle;
-        width: 180px;
+        width: 191px;
       }
       .terms-btn {
         margin-left: 15px;
@@ -246,6 +281,9 @@
       background-size: contain !important;
       height: 80px;
     }
+    .about-us-container {
+      padding: 0 50px;
+    }
     .about-us-body {
       margin-top: -20px;
       .team-members {
@@ -256,7 +294,25 @@
 
       .home-subsection {
         margin: 80px 0 !important;
+
+        &:first-child {
+          margin-top: 100px !important;
+        }
+        &:last-child {
+          margin-top: 100px !important;
+          padding-bottom: 40px;
+        }
+        .user-avatar-container {
+          margin: 0 auto;
+        }
+        .question-container {
+          flex: 0 0 100%;
+        }
       }
+    }
+    .question-back-img, .question-container {
+      flex: 0 0 95%;
+      margin: 0 auto;
     }
   }
 }
