--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -165,11 +165,13 @@
             padding: 0;
             border: none;
           }
-
+          .fa-bars {
+            font-size: 20px;
+          }
           .active {
             background-color: $primary-color;
 
-            .fa {
+            i {
               color: $white;
             }
           }
