--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -4,6 +4,10 @@
     min-height: min-content;
     background: $primary-color;
 
+    .container {
+      max-width: 1345px !important;
+    }
+
     @include media-breakpoint-down(md) {
       height: calc(100vh - #{$navbar-height-md});
     }
@@ -13,7 +17,7 @@
     }
 
     .hero-logo {
-      margin: 79px 0 77px;
+      margin: 79px 0 73px;
       border: none;
       padding: 0;
       width: 290px;
@@ -34,7 +38,7 @@
       margin: 0 0 25px;
       border: none;
       padding: 0;
-      font-size: 44px;
+      font-size: 49px;
       line-height: 1.3em;
       color: $white;
 
@@ -50,7 +54,7 @@
       border: none;
       padding: 0;
       font-size: 18px;
-      letter-spacing: 1px;
+      letter-spacing: 0.6px;
       line-height: 1em;
       color: $white;
 
@@ -69,7 +73,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      margin: 0 0 102px;
+      margin: 0 0 98px;
       font-size: 14px;
       font-weight: lighter;
       letter-spacing: 1px;
@@ -122,7 +126,7 @@
         }
 
         &:first-child {
-          margin-left: 10px;
+          margin-left: 0;
         }
         
         &:last-child {
@@ -435,12 +439,16 @@
 }
 
 .home-body, about-us-body {
+  .container {
+    max-width: 1345px !important;
+  }
   .home-subsection {
     .first-left-div {
       margin-top: 21px;
     }
     .second-right {
-      margin-top: 45px;
+      margin-top: 47px;
+      padding-left: 139px;
     }
     .third-left {
       margin-top: 35px;
@@ -463,14 +471,18 @@
     }
     .rent-gear-back-img {
       height: 365px;
+      margin-left: -7px;
       background-image: url('/images/home/undraw_maker_launch_crhe.png');
     }
     .add-gear-back-img {
       height: 386px;
+      margin-left: -12px;
       background-image: url('/images/home/undraw_make_it_rain_iwk4 (1).png');
     }
     .secure-back-img {
-      height: 365px;
+      height: 389px;
+      margin-left: -7px;
+      margin-top: 1px;
       background-image: url('/images/home/undraw_secure_data_0rwp.png');
     }
     h2 {
@@ -485,7 +497,7 @@
       line-height: 27px;
       color: #252525;
       margin: 42px 0 40px;
-      width: 73%;
+      width: 84%;
     }
     button {
       font-size: 16px;
@@ -496,7 +508,13 @@
       vertical-align: middle;
     }
     .signup-text {
-      margin: 45px 0 25px;
+      margin: 45px 0 52px;
+    }
+    .first-text {
+      margin: 45px 0 63px;
+    }
+    .second-text {
+      margin: 41px 0 43px;
     }
   }
 }
@@ -545,8 +563,12 @@
 @media (max-width: 1099px) {
   .home-subsection {
     text-align: center;
+
     p {
       width: 100% !important;
+    }
+    .second-right {
+      padding: 0 15px !important;
     }
   }
 
@@ -597,6 +619,11 @@
     bottom: 50px;
   }
 
+  .home-page {
+    .hero-searches {
+      max-width: unset !important;
+    }
+  }
   .home-page .slider-3 .slide .mb-3 {
     display: flex;
   }
