--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -417,7 +417,7 @@ header {
               justify-content: center;
             }
 
-            .fab {
+            span {
               font-size: 35px;
               margin: -10px 50px 5px 0;
 
