--- a/src/scss/pages/favourites.scss
+++ b/src/scss/pages/favourites.scss
@@ -71,11 +71,25 @@
       .sm_favor_table_top {
         display: block;
         width: 100%;
+
         .sm_favor_name_closeicon {
-           display: flex;
-            padding-top:34px;
+          display: flex;
+          padding: 15px;
+
+          .favourites_close_text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            p {
+              margin: 0;
+            }
+          }
+
           .tb_brand_model_name {
+            font-weight: 600;
             margin-bottom: 0;
+
             i {
               color: #f82462;
             }
@@ -86,26 +100,34 @@
         }
       }
       .sm_favor_bottom {
-        display:flex;
-        padding-top:10px;
+        display: flex;
+        padding: 15px;
         border-top: 2px #fef9f8 solid;
+
         .sm_favor_bottom_right {
-          border-left:2px #fef9f8 solid;
+          border-left: 2px #fef9f8 solid;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
           P {
             font-size: 12px;
             letter-spacing: 0.03em;
             color: #3A3A3A;
             opacity: 0.5;
-            padding:0;
-            margin:0;
-            margin-top:12px;
+            padding: 0;
+            margin: 0;
           }
           .tb_pay_per {
             font-weight: 800;
           }
         }
         .bottom_left {
-          padding:0;
+          padding: 0 !important;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
           td{
             border:0;
             padding-left: 0;
@@ -143,13 +165,10 @@
     }
     .sm_favor_table {
       display: flex;
+
       .sm_favor_name_closeicon {
-        padding-top: 0 !important;
         .favourites_close_icon {
             padding:10px!important;
-        }
-        .favourites_close_text {
-          margin-top:20px;
         }
       }
       .favor_gear-img {
