--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -15,6 +15,7 @@
 
     .card-body {
       border: none !important;
+      min-height: 150px;
     }
     // CSS for sidebar component
     .custom-beautiful-textfield {
@@ -675,10 +676,6 @@
   }
 }
 
-
-
-
-
 @media (min-width: 576px) and (max-width: 1050.98px) {
   .cardz-2 {
     -webkit-flex: 0 0 100%;
@@ -689,6 +686,7 @@
     justify-content: center;
   }
   .cardz {
+    min-width: 50%;
     flex: 0 50% !important;
     max-width: fit-content;
   }
