--- a/src/scss/components/custom-daterange-picker.scss
+++ b/src/scss/components/custom-daterange-picker.scss
@@ -6,9 +6,9 @@
   background-color: white;
   z-index: 1;
   box-shadow: 1px 1px 10px 5px rgba(224, 224, 224, 0.49);
-  margin-left: -21px;
   margin-top: 46px;
   border-top: solid 2px #FC92B1;
+  left: 0;
 }
 .rdrMonthAndYearPickers {
   position: absolute;
@@ -59,10 +59,4 @@
 }
 .rdrDayToday .rdrDayNumber span:after {
   background: $primary-color;
-}
-
-@media (max-width: 1199px) {
-  .date-range-wrapper {
-    margin-left: -257px;
-  }
 }
